Fixes #39 - label readability

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -660,7 +660,7 @@ $button-sml: rem-calc(11);
 // $form-label-pointer: pointer;
 // $form-label-font-size: rem-calc(14);
 // $form-label-font-weight: normal;
-// $form-label-font-color: scale-color(#000, $lightness: 30%);
+$form-label-font-color: #fff;
 // $form-label-bottom-margin: rem-calc(8);
 // $input-font-family: inherit;
 $input-font-color: white;
